# TVS_1

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANCHORED_SUMMARY.md  Dockerfile  Dockerfile.backup  README.md  deployment.md  docker-compose.prod.yml  docker-compose.yml  mediamtx.yml
.github/workflows/: ci.yml  deploy.yml
.gstack/: browse-audit.jsonl
.opencode/plans/: fix-register-influxdb-errors.md
AI_MODEL__/AI_MODEL/: GPU_CPU_CONSUMPTION_REPORT.txt  README.dataset.txt  botsort_custom.yaml  data.yaml  gpu_cpu_consumption_report.json  gpu_cpu_video_consumption_report.json  hen_counter.py  main.py  main_v11.py  mcmt_test.py  pyproject.toml  reid.py  report.txt  requirements.txt
AI_MODEL__/AI_MODEL/model_config/: __init__.py  ghost_modules.py  global_id_manager.py  msfn_head.py  transformer_reid.py  yolov11_p2.yaml
AI_MODEL__/AI_MODEL/monitoring/: run_video_monitoring.py  run_with_monitoring.py
AI_MODEL__/AI_MODEL/weight_model/: norm_stats.json  weight_model.ubj  weight_predictor.py
AI_MODEL__/AI_MODEL/without_reid/: README.md  __init__.py  count_report.json  main.py  overlap_dedup.py  roi_config.json  roi_selector.py  zone_counter.py
AI_MODEL__/Face_detection/: README.md  body_embedder.py  detector.py  embedder.py  enroll.py  gallery.py  gui_app.py  main.py  requirements.txt  streamlit_app.py
AI_MODEL__/model 2/: README.dataset.txt  README.roboflow.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_camera_positions.py  001_multi_farm.py  002_add_camera_roi.py  003_add_must_change_password.py  004_add_coops.py
backend/app/: config.py  database.py  main.py  rate_limit.py  security.py  utils.py
backend/app/alerts/: models.py  router.py  rules.py  schemas.py  service.py
backend/app/analytics/: router.py  schemas.py
backend/app/api/v1/: intruders.py  router.py
backend/app/auth/: deps.py  models.py  router.py  schemas.py  service.py
backend/app/cameras/: models.py  onvif.py  router.py  rtsp.py  schemas.py  service.py
backend/app/chickens/: models.py  router.py  schemas.py  service.py
backend/app/coops/: models.py  router.py  schemas.py
backend/app/detection/: detector.py  intruder.py  mcmt_singleton.py  mortality.py  queries.py  router.py  schemas.py  tracker.py  worker.py
backend/app/detection/mcmt/: __init__.py  embeddings.py  gallery.py  tracker.py
backend/app/environment/: router.py  schemas.py
backend/app/farms/: models.py  router.py  schemas.py  service.py
backend/app/frigate/: client.py  config_manager.py  router.py  schemas.py  subscriber.py
backend/app/health/: queries.py  router.py  schemas.py
backend/app/media/: __init__.py  client.py  router.py  schemas.py
backend/app/nvr/: client.py  router.py  schemas.py
backend/app/websocket/: manager.py  router.py
backend/tests/: conftest.py  test_alerts_and_health.py  test_api.py  test_auth.py  test_farm_scoping.py  test_frigate.py  test_intruder.py  test_media.py  test_mortality.py  test_profit_loss.py  test_websocket.py
backend/tests/frigate/: conftest.py  test_frigate.py
docs/: architecture.md  deployment_guide.md  localhost-development-guide.md
frigate/config/: config.yml
frontend/: generate_pwa_icons.py  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
models/: README.md
models/chicken_detector/: README.md
models/mortality_grid/: README.md
models/weight_estimator/: README.md  norm_stats.json
mosquitto/config/: mosquitto.conf
scripts/: backup.sh  e2e_test.sh
(+42 files in other folders)
