[project]
name = "poultry-backend"
version = "0.1.0"
description = "Poultry Monitoring System Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "influxdb-client>=1.46.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.1.0,<4.1.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.10",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0,<2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "ultralytics>=8.3.0",
    "supervision>=0.24.0",
    "boxmot==19.0.0",
    "faiss-cpu>=1.8.0",
    "timm>=1.0.0",
    "safetensors>=0.4.0",
    "sahi>=0.12.0",
    "cryptography>=42.0.0",
    "slowapi>=0.1.9",
    "sentry-sdk>=2.0.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "facenet-pytorch>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["app"]
