[project]
name = "ai-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boxmot>=21.0.0",
    "clip>=0.2.0",
    "datasets>=5.0.0",
    "icrawler>=0.6.10",
    "inference-sdk>=1.3.0",
    "ipykernel>=7.2.0",
    "numpy>=2.3.5",
    "pillow>=12.2.0",
    "pybaidupan>=0.2.0",
    "sam-2",
    "transformers>=5.10.2",
    "ultralytics>=8.4.61",
]

[tool.uv.sources]
sam-2 = { path = "../../sam2" }
